Fix layout bug by adding "flex: 1;" to ".tabletLayout .outlet" in App.module.css

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -48,6 +48,7 @@
 }
 
 .tabletLayout .outlet {
+  flex: 1;
   overflow: auto;
   height: 100%;
 }
